--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -2,8 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e279c104",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d7ed241",
    "metadata": {},
    "outputs": [],
    "source": []
