--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -2,20 +2,138 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "e279c104",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'PyCitySchools' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpathlib\u001b[39;00m \u001b[39mimport\u001b[39;00m Path\n\u001b[1;32m      5\u001b[0m \u001b[39m# Load files\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m school_data_load \u001b[39m=\u001b[39m Path(PyCitySchools\u001b[39m/\u001b[39mResources\u001b[39m/\u001b[39mschools_complete\u001b[39m.\u001b[39mcsv)\n\u001b[1;32m      7\u001b[0m student_data_load \u001b[39m=\u001b[39m Path(Resources\u001b[39m/\u001b[39mstudents_complete\u001b[39m.\u001b[39mcsv)\n\u001b[1;32m      9\u001b[0m \u001b[39mprint\u001b[39m(school_data_load)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'PyCitySchools' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Student ID</th>\n",
+       "      <th>student_name</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>grade</th>\n",
+       "      <th>school_name</th>\n",
+       "      <th>reading_score</th>\n",
+       "      <th>math_score</th>\n",
+       "      <th>School ID</th>\n",
+       "      <th>type</th>\n",
+       "      <th>size</th>\n",
+       "      <th>budget</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Paul Bradley</td>\n",
+       "      <td>M</td>\n",
+       "      <td>9th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>66</td>\n",
+       "      <td>79</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Victor Smith</td>\n",
+       "      <td>M</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>94</td>\n",
+       "      <td>61</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Kevin Rodriguez</td>\n",
+       "      <td>M</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>90</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Dr. Richard Scott</td>\n",
+       "      <td>M</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>67</td>\n",
+       "      <td>58</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Bonnie Ray</td>\n",
+       "      <td>F</td>\n",
+       "      <td>9th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>97</td>\n",
+       "      <td>84</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Student ID       student_name gender grade        school_name  \\\n",
+       "0           0       Paul Bradley      M   9th  Huang High School   \n",
+       "1           1       Victor Smith      M  12th  Huang High School   \n",
+       "2           2    Kevin Rodriguez      M  12th  Huang High School   \n",
+       "3           3  Dr. Richard Scott      M  12th  Huang High School   \n",
+       "4           4         Bonnie Ray      F   9th  Huang High School   \n",
+       "\n",
+       "   reading_score  math_score  School ID      type  size   budget  \n",
+       "0             66          79          0  District  2917  1910635  \n",
+       "1             94          61          0  District  2917  1910635  \n",
+       "2             90          60          0  District  2917  1910635  \n",
+       "3             67          58          0  District  2917  1910635  \n",
+       "4             97          84          0  District  2917  1910635  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -23,20 +141,222 @@
     "import pandas as pd\n",
     "from pathlib import Path\n",
     "\n",
-    "# Load files\n",
-    "school_data_load = Path(Resources/schools_complete.csv)\n",
-    "student_data_load = Path(Resources/students_complete.csv)\n",
+    "# Load data files\n",
+    "school_data_path = Path(\"Resources/schools_complete.csv\")\n",
+    "student_data_path = Path(\"Resources/students_complete.csv\")\n",
     "\n",
-    "print(school_data_load)"
+    "# Read data files into dataframes\n",
+    "school_data = pd.read_csv(school_data_path)\n",
+    "student_data = pd.read_csv(student_data_path)\n",
+    "\n",
+    "# combine dataframes into one\n",
+    "school_data_all = pd.merge(student_data, school_data, how=\"left\", on=[\"school_name\",\"school_name\"])\n",
+    "\n",
+    "# print results thus far\n",
+    "school_data_all.head()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00e3e763",
+   "metadata": {},
+   "source": [
+    "<font size = \"7\"> District Summary </font>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2d7ed241",
+   "execution_count": 36,
+   "id": "c98a7dd9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Total number of schools\n",
+    "school_count = school_data_all['School ID'].nunique()\n",
+    "\n",
+    "school_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "436ee66b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "39170"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Total number of students\n",
+    "student_count = school_data_all['Student ID'].count()\n",
+    "\n",
+    "student_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24649428"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Total budget (using only school_data df)\n",
+    "total_budget = school_data['budget'].sum()\n",
+    "\n",
+    "total_budget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "866a09e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "78.98537145774827"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Average math score\n",
+    "avg_math_score = school_data_all['math_score'].mean()\n",
+    "\n",
+    "avg_math_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "dad5dae2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "81.87784018381414"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Average reading score\n",
+    "avg_reading_score = school_data_all['reading_score'].mean()\n",
+    "\n",
+    "avg_reading_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "25759034",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74.9808526933878"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# % of students passing math\n",
+    "passing_math_count = school_data_all[(school_data_all[\"math_score\"] >= 70)].count()[\"student_name\"]\n",
+    "passing_math_percentage = (passing_math_count / float(student_count)) * 100\n",
+    "\n",
+    "passing_math_percentage\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "19f4123d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "85.80546336482001"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# % of students passing reading\n",
+    "passing_reading_count = school_data_all[(school_data_all[\"reading_score\"] >= 70)].count()[\"student_name\"]\n",
+    "passing_reading_percentage = (passing_reading_count / float(student_count)) * 100\n",
+    "\n",
+    "passing_reading_percentage "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "11229228",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "65.17232575950983"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# % of students passing math AND reading\n",
+    "passing_both_count = school_data_all[(school_data_all[\"math_score\"] >= 70) & (school_data_all[\"reading_score\"] >= 70)].count()[\"student_name\"]\n",
+    "passing_both_percentage = (passing_both_count / float(student_count)) * 100\n",
+    "\n",
+    "passing_both_percentage\n"
+   ]
   }
  ],
  "metadata": {
