1st overview completed

--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 111,
    "id": "e279c104",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
        "4             97          84          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 112,
    "id": "c98a7dd9",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
        "15"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 113,
    "id": "436ee66b",
    "metadata": {},
    "outputs": [
@@ -200,7 +200,7 @@
        "39170"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
        "24649428"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 115,
    "id": "866a09e1",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
        "78.98537145774827"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 116,
    "id": "dad5dae2",
    "metadata": {},
    "outputs": [
@@ -271,7 +271,7 @@
        "81.87784018381414"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 117,
    "id": "25759034",
    "metadata": {},
    "outputs": [
@@ -295,7 +295,7 @@
        "74.9808526933878"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 118,
    "id": "19f4123d",
    "metadata": {},
    "outputs": [
@@ -320,7 +320,7 @@
        "85.80546336482001"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 119,
    "id": "11229228",
    "metadata": {},
    "outputs": [
@@ -345,7 +345,7 @@
        "65.17232575950983"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,6 +356,96 @@
     "passing_both_percentage = (passing_both_count / float(student_count)) * 100\n",
     "\n",
     "passing_both_percentage\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "31e264a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Count</th>\n",
+       "      <th>Student Count</th>\n",
+       "      <th>Total Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Passing Both</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>15</td>\n",
+       "      <td>39170</td>\n",
+       "      <td>$24,649,428.00</td>\n",
+       "      <td>78.99</td>\n",
+       "      <td>81.88</td>\n",
+       "      <td>74.98%</td>\n",
+       "      <td>85.81%</td>\n",
+       "      <td>65.17%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   School Count  Student Count    Total Budget Average Math Score  \\\n",
+       "0            15          39170  $24,649,428.00              78.99   \n",
+       "\n",
+       "  Average Reading Score % Passing Math % Passing Reading % Passing Both  \n",
+       "0                 81.88         74.98%            85.81%         65.17%  "
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a high-level snapshot of the district's key metrics in a DataFrame\n",
+    "\n",
+    "# Create a dictionary with variable names as keys and their formatted values as values\n",
+    "new_fields = {\n",
+    "    'School Count': [school_count],\n",
+    "    'Student Count': [student_count],\n",
+    "    'Total Budget': ['${:,.2f}'.format(total_budget)],\n",
+    "    'Average Math Score': ['{:.2f}'.format(avg_math_score)],\n",
+    "    'Average Reading Score': ['{:.2f}'.format(avg_reading_score)],\n",
+    "    '% Passing Math': ['{:.2f}%'.format(passing_math_percentage)],\n",
+    "    '% Passing Reading': ['{:.2f}%'.format(passing_reading_percentage)],\n",
+    "    '% Passing Both': ['{:.2f}%'.format(passing_both_percentage)]\n",
+    "}\n",
+    "\n",
+    "# Create the DataFrame\n",
+    "district_summary = pd.DataFrame(new_fields)\n",
+    "\n",
+    "# Display the DataFrame\n",
+    "district_summary\n",
+    "\n",
+    "\n"
    ]
   }
  ],
