--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -1493,7 +1493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 66,
    "id": "24d59513",
    "metadata": {},
    "outputs": [
@@ -1527,9 +1527,11 @@
        "      <th>% Passing Math</th>\n",
        "      <th>% Passing Reading</th>\n",
        "      <th>% Overall Passing</th>\n",
+       "      <th>School Size</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>school_name</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -1553,6 +1555,7 @@
        "      <td>94.133477</td>\n",
        "      <td>97.039828</td>\n",
        "      <td>91.334769</td>\n",
+       "      <td>Medium (1000-2000)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Thomas High School</th>\n",
@@ -1565,6 +1568,7 @@
        "      <td>93.272171</td>\n",
        "      <td>97.308869</td>\n",
        "      <td>90.948012</td>\n",
+       "      <td>Medium (1000-2000)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Griffin High School</th>\n",
@@ -1577,6 +1581,7 @@
        "      <td>93.392371</td>\n",
        "      <td>97.138965</td>\n",
        "      <td>90.599455</td>\n",
+       "      <td>Medium (1000-2000)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Wilson High School</th>\n",
@@ -1589,6 +1594,7 @@
        "      <td>93.867718</td>\n",
        "      <td>96.539641</td>\n",
        "      <td>90.582567</td>\n",
+       "      <td>Large (2000-5000)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Pena High School</th>\n",
@@ -1601,6 +1607,46 @@
        "      <td>94.594595</td>\n",
        "      <td>95.945946</td>\n",
        "      <td>90.540541</td>\n",
+       "      <td>Small (&lt;1000)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wright High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1800</td>\n",
+       "      <td>$1,049,400.00</td>\n",
+       "      <td>$583.00</td>\n",
+       "      <td>83.682222</td>\n",
+       "      <td>83.955000</td>\n",
+       "      <td>93.333333</td>\n",
+       "      <td>96.611111</td>\n",
+       "      <td>90.333333</td>\n",
+       "      <td>Medium (1000-2000)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shelton High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1761</td>\n",
+       "      <td>$1,056,600.00</td>\n",
+       "      <td>$600.00</td>\n",
+       "      <td>83.359455</td>\n",
+       "      <td>83.725724</td>\n",
+       "      <td>93.867121</td>\n",
+       "      <td>95.854628</td>\n",
+       "      <td>89.892107</td>\n",
+       "      <td>Medium (1000-2000)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Holden High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>427</td>\n",
+       "      <td>$248,087.00</td>\n",
+       "      <td>$581.00</td>\n",
+       "      <td>83.803279</td>\n",
+       "      <td>83.814988</td>\n",
+       "      <td>92.505855</td>\n",
+       "      <td>96.252927</td>\n",
+       "      <td>89.227166</td>\n",
+       "      <td>Small (&lt;1000)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1614,6 +1660,9 @@
        "Griffin High School     Charter            1468         $917,500.00   \n",
        "Wilson High School      Charter            2283       $1,319,574.00   \n",
        "Pena High School        Charter             962         $585,858.00   \n",
+       "Wright High School      Charter            1800       $1,049,400.00   \n",
+       "Shelton High School     Charter            1761       $1,056,600.00   \n",
+       "Holden High School      Charter             427         $248,087.00   \n",
        "\n",
        "                    Per Student Budget  Average Math Score  \\\n",
        "school_name                                                  \n",
@@ -1622,6 +1671,9 @@
        "Griffin High School            $625.00           83.351499   \n",
        "Wilson High School             $578.00           83.274201   \n",
        "Pena High School               $609.00           83.839917   \n",
+       "Wright High School             $583.00           83.682222   \n",
+       "Shelton High School            $600.00           83.359455   \n",
+       "Holden High School             $581.00           83.803279   \n",
        "\n",
        "                     Average Reading Score  % Passing Math  % Passing Reading  \\\n",
        "school_name                                                                     \n",
@@ -1630,17 +1682,23 @@
        "Griffin High School              83.816757       93.392371          97.138965   \n",
        "Wilson High School               83.989488       93.867718          96.539641   \n",
        "Pena High School                 84.044699       94.594595          95.945946   \n",
+       "Wright High School               83.955000       93.333333          96.611111   \n",
+       "Shelton High School              83.725724       93.867121          95.854628   \n",
+       "Holden High School               83.814988       92.505855          96.252927   \n",
        "\n",
-       "                     % Overall Passing  \n",
-       "school_name                             \n",
-       "Cabrera High School          91.334769  \n",
-       "Thomas High School           90.948012  \n",
-       "Griffin High School          90.599455  \n",
-       "Wilson High School           90.582567  \n",
-       "Pena High School             90.540541  "
+       "                     % Overall Passing         School Size  \n",
+       "school_name                                                 \n",
+       "Cabrera High School          91.334769  Medium (1000-2000)  \n",
+       "Thomas High School           90.948012  Medium (1000-2000)  \n",
+       "Griffin High School          90.599455  Medium (1000-2000)  \n",
+       "Wilson High School           90.582567   Large (2000-5000)  \n",
+       "Pena High School             90.540541       Small (<1000)  \n",
+       "Wright High School           90.333333  Medium (1000-2000)  \n",
+       "Shelton High School          89.892107  Medium (1000-2000)  \n",
+       "Holden High School           89.227166       Small (<1000)  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1649,7 +1707,7 @@
     "# Sort the schools by `% Overall Passing` in descending order and display the top 5 rows.\n",
     "top_schools = per_school_summary.sort_values('% Overall Passing', ascending=False)\n",
     "\n",
-    "top_schools.head(5)"
+    "top_schools.head(8)"
    ]
   },
   {
@@ -1662,7 +1720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 67,
    "id": "917e2511",
    "metadata": {},
    "outputs": [
@@ -1696,9 +1754,11 @@
        "      <th>% Passing Math</th>\n",
        "      <th>% Passing Reading</th>\n",
        "      <th>% Overall Passing</th>\n",
+       "      <th>School Size</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>school_name</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -1722,6 +1782,7 @@
        "      <td>66.366592</td>\n",
        "      <td>80.220055</td>\n",
        "      <td>52.988247</td>\n",
+       "      <td>Large (2000-5000)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Figueroa High School</th>\n",
@@ -1734,6 +1795,7 @@
        "      <td>65.988471</td>\n",
        "      <td>80.739234</td>\n",
        "      <td>53.204476</td>\n",
+       "      <td>Large (2000-5000)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Huang High School</th>\n",
@@ -1746,6 +1808,7 @@
        "      <td>65.683922</td>\n",
        "      <td>81.316421</td>\n",
        "      <td>53.513884</td>\n",
+       "      <td>Large (2000-5000)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Hernandez High School</th>\n",
@@ -1758,6 +1821,7 @@
        "      <td>66.752967</td>\n",
        "      <td>80.862999</td>\n",
        "      <td>53.527508</td>\n",
+       "      <td>Large (2000-5000)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Johnson High School</th>\n",
@@ -1770,6 +1834,33 @@
        "      <td>66.057551</td>\n",
        "      <td>81.222432</td>\n",
        "      <td>53.539172</td>\n",
+       "      <td>Large (2000-5000)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ford High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2739</td>\n",
+       "      <td>$1,763,916.00</td>\n",
+       "      <td>$644.00</td>\n",
+       "      <td>77.102592</td>\n",
+       "      <td>80.746258</td>\n",
+       "      <td>68.309602</td>\n",
+       "      <td>79.299014</td>\n",
+       "      <td>54.289887</td>\n",
+       "      <td>Large (2000-5000)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bailey High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4976</td>\n",
+       "      <td>$3,124,928.00</td>\n",
+       "      <td>$628.00</td>\n",
+       "      <td>77.048432</td>\n",
+       "      <td>81.033963</td>\n",
+       "      <td>66.680064</td>\n",
+       "      <td>81.933280</td>\n",
+       "      <td>54.642283</td>\n",
+       "      <td>Large (2000-5000)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1783,6 +1874,8 @@
        "Huang High School        District            2917       $1,910,635.00   \n",
        "Hernandez High School    District            4635       $3,022,020.00   \n",
        "Johnson High School      District            4761       $3,094,650.00   \n",
+       "Ford High School         District            2739       $1,763,916.00   \n",
+       "Bailey High School       District            4976       $3,124,928.00   \n",
        "\n",
        "                      Per Student Budget  Average Math Score  \\\n",
        "school_name                                                    \n",
@@ -1791,6 +1884,8 @@
        "Huang High School                $655.00           76.629414   \n",
        "Hernandez High School            $652.00           77.289752   \n",
        "Johnson High School              $650.00           77.072464   \n",
+       "Ford High School                 $644.00           77.102592   \n",
+       "Bailey High School               $628.00           77.048432   \n",
        "\n",
        "                       Average Reading Score  % Passing Math  \\\n",
        "school_name                                                    \n",
@@ -1799,17 +1894,21 @@
        "Huang High School                  81.182722       65.683922   \n",
        "Hernandez High School              80.934412       66.752967   \n",
        "Johnson High School                80.966394       66.057551   \n",
+       "Ford High School                   80.746258       68.309602   \n",
+       "Bailey High School                 81.033963       66.680064   \n",
        "\n",
-       "                       % Passing Reading  % Overall Passing  \n",
-       "school_name                                                  \n",
-       "Rodriguez High School          80.220055          52.988247  \n",
-       "Figueroa High School           80.739234          53.204476  \n",
-       "Huang High School              81.316421          53.513884  \n",
-       "Hernandez High School          80.862999          53.527508  \n",
-       "Johnson High School            81.222432          53.539172  "
+       "                       % Passing Reading  % Overall Passing        School Size  \n",
+       "school_name                                                                     \n",
+       "Rodriguez High School          80.220055          52.988247  Large (2000-5000)  \n",
+       "Figueroa High School           80.739234          53.204476  Large (2000-5000)  \n",
+       "Huang High School              81.316421          53.513884  Large (2000-5000)  \n",
+       "Hernandez High School          80.862999          53.527508  Large (2000-5000)  \n",
+       "Johnson High School            81.222432          53.539172  Large (2000-5000)  \n",
+       "Ford High School               79.299014          54.289887  Large (2000-5000)  \n",
+       "Bailey High School             81.933280          54.642283  Large (2000-5000)  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1818,7 +1917,7 @@
     "# Sort the schools by `% Overall Passing` in ascending order and display the top 5 rows.\n",
     "bottom_schools = per_school_summary.sort_values('% Overall Passing', ascending=True)\n",
     "\n",
-    "bottom_schools.head(5)"
+    "bottom_schools.head(7)"
    ]
   },
   {
